samples/_failures_safe/1761558859_a709d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7471c52c.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_7471c52c.c:124: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_7471c52c.c:123:5: error: expected declaration or statement at end of input
  123 |     const char* level_descriptions[LOG_LEVELS
      |     ^~~~~
